<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="8dp"
    android:descendantFocusability="blocksDescendants">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLabel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewToken"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="107dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="107dp"
        android:text="01234567"

        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLabel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/textViewToken"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"
        android:text="privacyIDEA:PIPU0000015A"

        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform" />

    <Button
        android:id="@+id/allow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewToken"
        android:layout_alignBottom="@+id/textViewToken"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/PIBLUE"
        android:text="@string/button_text_next"
        android:textColor="@color/zxing_status_text" />

</RelativeLayout>