...
    <string name="ResponseNotParsed">The response could not be parsed.</string>
    <string name="ResponseNoKey">The response does not contain a key.</string>
    <string name="RegistrationTimeExpired">Registration time expired.</string>
    <string name="RolloutURLinvalid">Rollout URL is invalid.</string>
    <string name="RolloutURLNotResolved">Rollout URL cannot be resolved.</string>
    <string name="KeyFromServerWrongFormat">The key from the server was not in the correct format.</string>
    <string name="WaitWhileSecretIsGenerated">Please wait while the secret is generated.</string>
    <string name="IncompatiblePushVersion">Incompatible Version</string>
    <string name="IncompatiblePushVersionMessage">The requested rollout version is higher than the supported one on this phone!</string>
    <string name="TokenExpiredTitle">Token expired!</string>
    <string name="TokenAddedToast">Token added:</string>
    <string name="ServerResponseNotOk">Server does not allow the rollout.</string>
    <string name="AuthenticationSuccessful">Authentication successful!</string>
...
    <string name="NotificationWithToken">With token</string>
    <string name="ERR_SERVER_UNREACHABLE">Server was unreachable.</string>
    <string name="retry_authentication">Retry Authentication</string>
    <string name="PushAuthInvalidSignature">Authentication signature is invalid. Try to authenticate again.</string>
    <string name="PushAuthSigningError">Authentication could not be signed. Try enrolling a new token.</string>
    <string name="Dismiss">Dismiss</string>
    <string name="TwoStepFinishDialogTitle">Smartphone part</string>
    <string name="ButtonOK">OK</string>

</resources>

